CloudAlpacas/salesforce/main/default/objects/SDO_Generated_Operation_Plan__c/SDO_Generated_Operation_Plan__c.object-meta.xml
<CustomObject>
    <description>Demo shadow object that mirrors the read-only GenOpPlan standard object, enabling SE-editable Service Planner data for the Service Assistant Analytics dashboard. Maps to ssot__GeneratedOperationPlan__dlm.</description>
    <label>SDO Generated Operation Plan</label>
    <nameField>
        <displayFormat>SDOP-{00000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Generated Operation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>