CloudAlpacas/salesforce/main/default/objects/SDO_Generated_Operation_Plan__c/fields/Generated_Operation_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Generated_Operation_Plan_Id__c</fullName>
    <description>Primary key mapped to the ssot__GeneratedOperationPlan__dlm PK field. Convention: equals External_ID__c.</description>
    <externalId>true</externalId>
    <label>Generated Operation Plan Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>