CloudAlpacas/salesforce/main/default/objects/SDO_Generated_Operation_Plan__c/fields/Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Name__c</fullName>
    <description>Topic name of the generated plan (e.g. Refund, Escalation, Diagnostic).</description>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>